--- a/panel/assets/css/style.css
+++ b/panel/assets/css/style.css
@@ -1,1 +1,115 @@
+@import url(https://fonts.googleapis.com/css?family=Audiowide)
 
+body {
+    font-family: 'Audiowide', sans-serif; /* Applied custom font */
+    margin: 0;
+    padding: 0;
+    background-color: #F4F4F4;
+    font-size: 15px;
+}
+
+.bg-red {
+    background-color: #ff0000 !important;
+}
+
+.navbar {
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-nav .nav-link {
+    color: #fff !important;
+    padding: 10px 15px;
+    transition: background-color 0.3s ease;
+}
+
+.navbar-nav .nav-link:hover {
+    background-color: #cc0000;
+    border-radius: 5px;
+}
+
+.navbar-nav .nav-link.active {
+    background-color: #CC0000;
+    border-radius: 5px;
+}
+
+.content {
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.options-container {
+    margin: 20px;
+    padding: 20px;
+    background-color: #FF0000;
+    border: 2px solid #ff0000;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 1);
+}
+
+.option {
+    padding: 10px;
+    margin-bottom: 0;
+    background-color: #FF0000;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    color: #FFFFFF;
+    border: 0.8px solid #FF5858;
+}
+
+.option i {
+    margin-right: 10px;
+}
+
+.option:hover {
+    background-color: #FF0000;
+}
+
+.heado {
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #FF0B0B;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: #F4F4F4;
+    font-size: 30px;
+}
+
+.heado i {
+    margin-right: 10px;
+}
+
+.heado:hover {
+    background-color: #FF0000;
+}
+
+a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+label {
+    color: #FFFFFF;
+}
+
+.message {
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
